# final_exp_peft

./: .gitignore  pyproject.toml  singular-adapters.ipynb
domain_adaptation_project/ablations/telephone/: GTE_adapterLora.ipynb  GTE_invPre.ipynb
domain_adaptation_project/adapterLora/: run_notebooks.py
domain_adaptation_project/adapterLora/fiction/: GF_adapterLora.ipynb  SF_adapterLora.ipynb  TEF_adapterLora.ipynb  TRF_adapterLora.ipynb
domain_adaptation_project/adapterLora/government/: FG_adapterLora.ipynb  SG_adapterLora.ipynb  TEG_adapterLora.ipynb  TRG_adapterLora.ipynb
domain_adaptation_project/baselines/: full_model.ipynb
domain_adaptation_project/invLora_macro/: run_notebooks.py
domain_adaptation_project/invPre/: run_notebooks.py
domain_adaptation_project/inv_macro/: run_notebooks.py
domain_adaptation_project/mlm/: mlm_adapter_F.ipynb  mlm_adapter_G.ipynb  mlm_adapter_S.ipynb  mlm_adapter_TE.ipynb  mlm_adapter_TR.ipynb  mlm_inv_F.ipynb  mlm_inv_G.ipynb  mlm_inv_S.ipynb  mlm_inv_TE.ipynb  mlm_inv_TR.ipynb  mlm_invpr_union_F.ipynb  mlm_invpr_union_G.ipynb  mlm_invpr_union_S.ipynb  mlm_invpr_union_TE.ipynb  mlm_invpr_union_TR.ipynb  mlm_union_F.ipynb  mlm_union_G.ipynb  mlm_union_S.ipynb  mlm_union_TE.ipynb  mlm_union_TR.ipynb  mlm_union_all_F.ipynb  mlm_union_all_G.ipynb  mlm_union_all_S.ipynb  mlm_union_all_TE.ipynb  mlm_union_all_TR.ipynb
domain_adaptation_project/plain/: run_notebooks.py
domain_adaptation_project/union/: run_notebooks.py  script.ipynb
domain_adaptation_project/unipelt_macro/: run_notebooks.py
(+223 files in other folders)
